# sample-git-diffs

./: .gitignore  pyproject.toml  to_md.py
sample_git_diffs/: lib.py  sample_git_diffs.py  to_md.py
